--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./style.css" type="text/css" />
-  <title>Reddit API Replica</title>
+  <title>Client for Reddit</title>
 </head>
 <body>
   <main id="root"></main>
